--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "peerDependencies": {
     "grunt-contrib-imagemin": "^3.0.0",
     "grunt-contrib-pug": "^2.0.0",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-sass": "^3.0.0",
     "grunt-webpack": "^3.0.0",
     "grunt": "^1.0.0"
