--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-sass": "^3.0.0",
     "grunt-webpack": "^3.0.0",
-    "grunt": "^1.0.0"
+    "grunt": "^1.0.0",
+    "winston": "^3.2.1"
   },
   "files": [
     "/lib/**/*.js",
