--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-plugin-transform-define": "^2.0.0",
     "core-js": "^3.0.0",
+    "express-winston": "^4.0.0",
     "grunt-contrib-imagemin": "^3.0.0",
     "grunt-contrib-pug": "^2.0.0",
     "grunt-contrib-copy": "^1.0.0",
