--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "bugs": {
     "url": "https://github.com/CleyFaye/boilerplate/issues"
   },
+  "esm": {
+    "cache": false
+  },
   "homepage": "https://github.com/CleyFaye/boilerplate#readme",
   "devDependencies": {
     "@types/express": "^4.17.2",
