--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   },
   "homepage": "https://github.com/CleyFaye/boilerplate#readme",
   "devDependencies": {
+    "@cley_faye/eslint-config": "^0.2.3",
     "@types/express": "^4.17.2",
     "@types/http-errors": "^1.6.3",
     "@types/node": "^12.12.26",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
     "eslint": "^6.8.0",
+    "eslint-plugin-promise": "^4.2.1",
     "express-winston": "^4.0.2",
     "typescript": "^3.7.5",
     "winston": "^3.2.1"
