--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@cley_faye/eslint-config": "^1.0.3",
     "@types/express": "^4.17.8",
+    "@types/grunt": "^0.4.25",
     "@types/http-errors": "^1.8.0",
     "@types/node": "^14.6.4",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
