Added peerDependencies and peerDependenciesMeta

--- a/package.json
+++ b/package.json
@@ -32,6 +32,50 @@
     "typescript": "^4.1.5",
     "winston": "^3.3.3"
   },
+  "peerDependencies": {
+    "esm": "3.x",
+    "grunt": "1.x",
+    "grunt-webpack": "4.x",
+    "node-sass": "5.x",
+    "grunt-sass": "3.x",
+    "grunt-contrib-watch": "1.x",
+    "grunt-contrib-copy": "1.x",
+    "grunt-contrib-pug": "2.x",
+    "grunt-contrib-imagemin": "4.x",
+    "@babel/plugin-transform-runtime": "7.x",
+    "core-js": "3.x",
+    "babel-plugin-transform-define": "2.x",
+    "@babel/preset-react": "7.x",
+    "@babel/preset-env": "7.x",
+    "@babel/core": "7.x",
+    "eslint-loader": "4.x",
+    "babel-loader": "8.x",
+    "express": "4.x",
+    "winston": "3.x",
+    "express-winston": "4.x"
+  },
+  "peerDependenciesMeta": {
+    "esm": {"optional":true},
+    "grunt": {"optional":true},
+    "grunt-webpack": {"optional":true},
+    "node-sass": {"optional":true},
+    "grunt-sass": {"optional":true},
+    "grunt-contrib-watch": {"optional":true},
+    "grunt-contrib-copy": {"optional":true},
+    "grunt-contrib-pug": {"optional":true},
+    "grunt-contrib-imagemin": {"optional":true},
+    "@babel/plugin-transform-runtime": {"optional":true},
+    "core-js": {"optional":true},
+    "babel-plugin-transform-define": {"optional":true},
+    "@babel/preset-react": {"optional":true},
+    "@babel/preset-env": {"optional":true},
+    "@babel/core": {"optional":true},
+    "eslint-loader": {"optional":true},
+    "babel-loader": {"optional":true},
+    "express": {"optional":true},
+    "winston": {"optional":true},
+    "express-winston": {"optional":true}
+  },
   "dependencies": {},
   "files": [
     "/lib/**/*.js",
