--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     "esm": "3.x",
     "grunt": "1.x",
     "grunt-webpack": "4.x",
-    "node-sass": "5.x",
+    "sass": "1.x",
     "grunt-sass": "3.x",
     "grunt-contrib-watch": "1.x",
     "grunt-contrib-copy": "1.x",
-    "grunt-contrib-pug": "2.x",
+    "grunt-contrib-pug": "3.x",
     "grunt-contrib-imagemin": "4.x",
     "@babel/plugin-transform-runtime": "7.x",
     "core-js": "3.x",
@@ -64,7 +64,7 @@
     "grunt-webpack": {
       "optional": true
     },
-    "node-sass": {
+    "sass": {
       "optional": true
     },
     "grunt-sass": {
