--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
   "files.exclude": {
+    ".tsbuildinfo": true,
+    ".vscode": true,
     "**/lib": true,
-    "node_modules": true,
-    "tsconfig.tsbuildinfo": true
+    "node_modules": true
   }
 }
