--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "incremental": true,
     "target": "ES2020",
-    "module": "ES2020",
+    "module": "commonjs",
     "declaration": true,
     "outDir": "./lib",
     "rootDir": "./src",
