--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "prepack": "npm run grunt -- clean build",
-    "grunt": "npm exec grunt -- --gruntfile Gruntfile.cjs"
+    "grunt": "npx grunt --gruntfile Gruntfile.cjs"
   },
   "author": "Gabriel Paul \"Cley Faye\" Risterucci",
   "license": "MIT",
@@ -31,7 +31,7 @@
     "grunt": "^1.4.1",
     "grunt-banner": "^0.6.0",
     "grunt-contrib-clean": "^2.0.0",
-    "grunt-ts": "^6.0.0-beta.22",
+    "grunt-run": "^0.8.1",
     "load-grunt-tasks": "^5.1.0",
     "typescript": "^4.1.5",
     "winston": "^3.3.3"
