--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "express-winston": "4.x",
     "grunt": "1.x",
     "grunt-contrib-copy": "1.x",
-    "grunt-contrib-imagemin": "4.x",
+    "@keeex/grunt-contrib-imagemin": "4.x",
     "grunt-contrib-pug": "3.x",
     "grunt-contrib-watch": "1.x",
     "grunt-sass": "3.x",
