--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "eslint": "^8.7.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-webpack-plugin": "^3.0.1",
     "express-winston": "^4.0.5",
@@ -33,6 +34,7 @@
     "grunt-contrib-clean": "^2.0.0",
     "grunt-run": "^0.8.1",
     "load-grunt-tasks": "^5.1.0",
+    "logform": "^2.3.2",
     "typescript": "^4.1.5",
     "winston": "^3.3.3"
   },
