--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@keeex/eslint-config": "^1.8.2",
     "@types/express": "^4.17.14",
     "@types/grunt": "^0.4.27",
-    "@types/http-errors": "^1.8.2",
-    "@types/node": "^16.18.0",
+    "@types/http-errors": "^2.0.1",
+    "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "eslint": "^8.26.0",
@@ -43,7 +43,7 @@
     "@babel/plugin-transform-runtime": "7.x",
     "@babel/preset-env": "7.x",
     "@babel/preset-react": "7.x",
-    "babel-loader": "8.x||9.x",
+    "babel-loader": "9.x",
     "babel-plugin-transform-define": "2.x",
     "core-js": "3.x",
     "eslint-webpack-plugin": "^3.0.1",
@@ -55,7 +55,7 @@
     "grunt-contrib-watch": "1.x",
     "grunt-sass": "3.x",
     "grunt-webpack": "5.x",
-    "resolve-typescript-plugin": "1.x||2.x",
+    "resolve-typescript-plugin": "2.x",
     "sass": "1.x",
     "ts-loader": "^9.4.1",
     "winston": "3.x"
