Need resolve-typescript-plugin as non optional

--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
       "optional": true
     },
     "resolve-typescript-plugin": {
-      "optional": true
+      "optional": false
     },
     "sass": {
       "optional": true
