--- a/package.json
+++ b/package.json
@@ -17,25 +17,25 @@
   },
   "homepage": "https://github.com/CleyFaye/boilerplate#readme",
   "devDependencies": {
-    "@keeex/eslint-config": "^1.8.2",
-    "@types/express": "^4.17.14",
+    "@keeex/eslint-config": "^1.9.2",
+    "@types/express": "^4.17.17",
     "@types/grunt": "^0.4.27",
     "@types/http-errors": "^2.0.1",
-    "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.41.0",
-    "@typescript-eslint/parser": "^5.41.0",
-    "eslint": "^8.26.0",
-    "eslint-plugin-import": "^2.26.0",
+    "@types/node": "^18.11.19",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "eslint": "^8.33.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-webpack-plugin": "^3.2.0",
     "express-winston": "^4.2.0",
-    "grunt": "^1.5.3",
+    "grunt": "^1.6.1",
     "grunt-banner": "^0.6.0",
     "grunt-contrib-clean": "^2.0.1",
     "grunt-run": "^0.8.1",
     "load-grunt-tasks": "^5.1.0",
     "logform": "^2.4.2",
-    "typescript": "^4.8.4",
+    "typescript": "^4.9.5",
     "winston": "^3.8.2"
   },
   "peerDependencies": {
@@ -55,7 +55,7 @@
     "grunt-contrib-watch": "1.x",
     "grunt-sass": "3.x",
     "grunt-webpack": "5.x",
-    "resolve-typescript-plugin": "2.x",
+    "resolve-typescript-plugin": "^2.0.0",
     "sass": "1.x",
     "ts-loader": "^9.4.1",
     "winston": "3.x"
