--- a/package.json
+++ b/package.json
@@ -125,5 +125,8 @@
     "/lib/**/*.js",
     "/lib/**/*.d.ts",
     "/grunt.js"
-  ]
+  ],
+  "dependencies": {
+    "@cley_faye/http-codes-consts": "^2.0.0"
+  }
 }
