--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
   "homepage": "https://github.com/CleyFaye/boilerplate#readme",
   "devDependencies": {
     "@keeex/eslint-config": "^1.11.5",
-    "@types/express": "^4.17.18",
+    "@types/express": "^4.17.19",
     "@types/grunt": "^0.4.28",
     "@types/http-errors": "^2.0.2",
     "@types/minimist": "^1.2.3",
-    "@types/node": "^18.18.3",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "eslint": "^8.50.0",
+    "@types/node": "^18.18.4",
+    "@types/webpack-bundle-analyzer": "^4.6.1",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
+    "eslint": "^8.51.0",
     "eslint-plugin-deprecation": "^2.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-promise": "^6.1.1",
@@ -43,7 +44,7 @@
     "logform": "^2.5.1",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
-    "winston": "^3.10.0"
+    "winston": "^3.11.0"
   },
   "peerDependencies": {
     "@babel/core": "7.x",
@@ -61,10 +62,11 @@
     "grunt-contrib-pug": "3.x",
     "grunt-contrib-watch": "1.x",
     "grunt-sass": "3.x",
-    "grunt-webpack": "5.x",
+    "grunt-webpack": "5.x||6.x",
     "minimist": "^1.2.8",
     "sass": "1.x",
     "ts-loader": "^9.4.1",
+    "webpack-bundle-analyzer": "^4.9.1",
     "winston": "3.x"
   },
   "peerDependenciesMeta": {
