Fixed dependency for webpack-bundle-analyzer

--- a/package.json
+++ b/package.json
@@ -127,6 +127,9 @@
     "ts-loader": {
       "optional": true
     },
+    "webpack-bundle-analyzer": {
+      "optional": true
+    },
     "winston": {
       "optional": true
     }
