--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.57.1",
     "eslint-plugin-deprecation": "^2.0.0",
-    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-i": "^2.29.1",
     "eslint-plugin-promise": "^6.6.0",
     "express-winston": "^4.2.0",
     "grunt": "^1.6.1",
